--- a/webapp/view/Worklist.view.xml
+++ b/webapp/view/Worklist.view.xml
@@ -68,12 +68,7 @@
 						<cells>
 							<ObjectIdentifier
 								title="{ID}"/>
-							<ObjectNumber
-								number="{
-									path: '',
-									formatter: '.formatter.numberUnit'
-								}"
-								unit="{}"/>
+							<Text text="{Name}" />
 						</cells>
 					</ColumnListItem>
 				</items>
